Added custom mesh

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=480D68D243A5DCFA118308B24784A4EA
 ProjectName=Third Person Game Template
+CompanyName=JssnThony
+CompanyDistinguishedName=JssnThony
+Homepage=JssnThony
+SupportContact=JssnThony
+
